直方图修改

--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>989</width>
-    <height>766</height>
+    <height>626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,7 @@
        <string notr="true">background-image: url(:/Hi_Opencv/background1.jpg);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -1334,7 +1334,7 @@ color: rgb(31, 31, 31);
 background-color: rgb(157, 157, 157);</string>
              </property>
              <property name="text">
-              <string>计算图像直方图</string>
+              <string>calculation</string>
              </property>
             </widget>
            </item>
@@ -1352,7 +1352,7 @@ color: rgb(31, 31, 31);
 background-color: rgb(157, 157, 157);</string>
              </property>
              <property name="text">
-              <string>图像直方图均衡化</string>
+              <string>equalization</string>
              </property>
             </widget>
            </item>
@@ -1370,7 +1370,7 @@ color: rgb(31, 31, 31);
 background-color: rgb(157, 157, 157);</string>
              </property>
              <property name="text">
-              <string>反射投影</string>
+              <string>reflection</string>
              </property>
             </widget>
            </item>
@@ -3950,8 +3950,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_open()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>840</x>
-     <y>149</y>
+     <x>837</x>
+     <y>139</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -3966,8 +3966,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_start()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>950</x>
-     <y>149</y>
+     <x>947</x>
+     <y>139</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -3983,7 +3983,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>110</x>
-     <y>187</y>
+     <y>159</y>
     </hint>
     <hint type="destinationlabel">
      <x>259</x>
@@ -3999,7 +3999,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>147</x>
-     <y>331</y>
+     <y>275</y>
     </hint>
     <hint type="destinationlabel">
      <x>439</x>
@@ -4014,8 +4014,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_median_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>160</x>
-     <y>470</y>
+     <x>162</x>
+     <y>384</y>
     </hint>
     <hint type="destinationlabel">
      <x>601</x>
@@ -4030,8 +4030,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_Bilateral_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>147</x>
-     <y>609</y>
+     <x>162</x>
+     <y>491</y>
     </hint>
     <hint type="destinationlabel">
      <x>747</x>
@@ -4046,8 +4046,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_start_2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>948</x>
-     <y>149</y>
+     <x>943</x>
+     <y>133</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4062,8 +4062,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_erode_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>148</x>
-     <y>226</y>
+     <x>134</x>
+     <y>196</y>
     </hint>
     <hint type="destinationlabel">
      <x>652</x>
@@ -4078,8 +4078,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_dilate_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>126</x>
-     <y>399</y>
+     <x>134</x>
+     <y>330</y>
     </hint>
     <hint type="destinationlabel">
      <x>593</x>
@@ -4094,8 +4094,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_morphologyEX_show()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>148</x>
-     <y>572</y>
+     <x>134</x>
+     <y>464</y>
     </hint>
     <hint type="destinationlabel">
      <x>550</x>
@@ -4111,7 +4111,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>823</x>
-     <y>416</y>
+     <y>322</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4127,7 +4127,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>823</x>
-     <y>446</y>
+     <y>352</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4143,7 +4143,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>823</x>
-     <y>476</y>
+     <y>382</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4159,7 +4159,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>943</x>
-     <y>416</y>
+     <y>322</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4175,7 +4175,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>943</x>
-     <y>446</y>
+     <y>352</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4191,7 +4191,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>943</x>
-     <y>477</y>
+     <y>383</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4207,7 +4207,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>943</x>
-     <y>506</y>
+     <y>412</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4223,7 +4223,7 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>955</x>
-     <y>536</y>
+     <y>442</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4238,8 +4238,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_open_2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>834</x>
-     <y>149</y>
+     <x>830</x>
+     <y>133</y>
     </hint>
     <hint type="destinationlabel">
      <x>865</x>
@@ -4255,11 +4255,11 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>122</x>
-     <y>226</y>
+     <y>191</y>
     </hint>
     <hint type="destinationlabel">
      <x>230</x>
-     <y>-7</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4271,11 +4271,11 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>146</x>
-     <y>399</y>
+     <y>329</y>
     </hint>
     <hint type="destinationlabel">
      <x>189</x>
-     <y>-11</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4286,12 +4286,12 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_fitEllipse()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>111</x>
-     <y>572</y>
+     <x>135</x>
+     <y>465</y>
     </hint>
     <hint type="destinationlabel">
      <x>92</x>
-     <y>-11</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4302,8 +4302,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_open1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>838</x>
-     <y>89</y>
+     <x>823</x>
+     <y>100</y>
     </hint>
     <hint type="destinationlabel">
      <x>863</x>
@@ -4318,8 +4318,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_open2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>957</x>
-     <y>89</y>
+     <x>941</x>
+     <y>100</y>
     </hint>
     <hint type="destinationlabel">
      <x>864</x>
@@ -4334,8 +4334,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_match()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>838</x>
-     <y>125</y>
+     <x>823</x>
+     <y>138</y>
     </hint>
     <hint type="destinationlabel">
      <x>866</x>
@@ -4350,8 +4350,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>193</y>
+     <x>834</x>
+     <y>207</y>
     </hint>
     <hint type="destinationlabel">
      <x>864</x>
@@ -4366,8 +4366,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>221</y>
+     <x>834</x>
+     <y>237</y>
     </hint>
     <hint type="destinationlabel">
      <x>863</x>
@@ -4382,8 +4382,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method3()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>249</y>
+     <x>834</x>
+     <y>267</y>
     </hint>
     <hint type="destinationlabel">
      <x>859</x>
@@ -4398,8 +4398,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method4()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>277</y>
+     <x>834</x>
+     <y>297</y>
     </hint>
     <hint type="destinationlabel">
      <x>860</x>
@@ -4414,8 +4414,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method5()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>305</y>
+     <x>834</x>
+     <y>327</y>
     </hint>
     <hint type="destinationlabel">
      <x>862</x>
@@ -4430,8 +4430,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_method6()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>939</x>
-     <y>333</y>
+     <x>834</x>
+     <y>357</y>
     </hint>
     <hint type="destinationlabel">
      <x>864</x>
@@ -4446,8 +4446,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_open_7()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>891</x>
-     <y>153</y>
+     <x>887</x>
+     <y>141</y>
     </hint>
     <hint type="destinationlabel">
      <x>861</x>
@@ -4462,8 +4462,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_type()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>956</x>
-     <y>312</y>
+     <x>876</x>
+     <y>256</y>
     </hint>
     <hint type="destinationlabel">
      <x>861</x>
@@ -4478,8 +4478,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_value()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>956</x>
-     <y>477</y>
+     <x>940</x>
+     <y>378</y>
     </hint>
     <hint type="destinationlabel">
      <x>860</x>
@@ -4494,8 +4494,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_spinBox_value()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>812</x>
-     <y>477</y>
+     <x>833</x>
+     <y>377</y>
     </hint>
     <hint type="destinationlabel">
      <x>860</x>
@@ -4510,8 +4510,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_bordertype1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>937</x>
-     <y>639</y>
+     <x>843</x>
+     <y>504</y>
     </hint>
     <hint type="destinationlabel">
      <x>830</x>
@@ -4526,8 +4526,8 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_bordertype2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>937</x>
-     <y>664</y>
+     <x>843</x>
+     <y>533</y>
     </hint>
     <hint type="destinationlabel">
      <x>692</x>
@@ -4542,12 +4542,12 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_threshold()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>151</x>
-     <y>227</y>
+     <x>134</x>
+     <y>197</y>
     </hint>
     <hint type="destinationlabel">
      <x>86</x>
-     <y>-20</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4558,12 +4558,12 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_makeborder()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>117</x>
-     <y>401</y>
+     <x>134</x>
+     <y>331</y>
     </hint>
     <hint type="destinationlabel">
      <x>216</x>
-     <y>-19</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4574,12 +4574,12 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_Point()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>131</x>
-     <y>574</y>
+     <x>134</x>
+     <y>466</y>
     </hint>
     <hint type="destinationlabel">
      <x>361</x>
-     <y>-12</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4590,12 +4590,12 @@ background-color: rgb(157, 157, 157);</string>
    <slot>on_start_7()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>825</x>
-     <y>700</y>
+     <x>823</x>
+     <y>570</y>
     </hint>
     <hint type="destinationlabel">
      <x>656</x>
-     <y>-9</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4611,7 +4611,7 @@ background-color: rgb(157, 157, 157);</string>
     </hint>
     <hint type="destinationlabel">
      <x>803</x>
-     <y>-21</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4627,7 +4627,7 @@ background-color: rgb(157, 157, 157);</string>
     </hint>
     <hint type="destinationlabel">
      <x>858</x>
-     <y>-3</y>
+     <y>0</y>
     </hint>
    </hints>
   </connection>
@@ -4642,7 +4642,7 @@ background-color: rgb(157, 157, 157);</string>
      <y>121</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-52</x>
+     <x>0</x>
      <y>93</y>
     </hint>
    </hints>
@@ -4655,10 +4655,10 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>143</x>
-     <y>218</y>
+     <y>184</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-99</x>
+     <x>0</x>
      <y>194</y>
     </hint>
    </hints>
@@ -4671,10 +4671,10 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>111</x>
-     <y>297</y>
+     <y>246</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-82</x>
+     <x>0</x>
      <y>274</y>
     </hint>
    </hints>
@@ -4687,10 +4687,10 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>74</x>
-     <y>384</y>
+     <y>316</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-120</x>
+     <x>0</x>
      <y>368</y>
     </hint>
    </hints>
@@ -4703,10 +4703,10 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>94</x>
-     <y>467</y>
+     <y>382</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-107</x>
+     <x>0</x>
      <y>442</y>
     </hint>
    </hints>
@@ -4719,10 +4719,10 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>106</x>
-     <y>555</y>
+     <y>453</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-61</x>
+     <x>0</x>
      <y>528</y>
     </hint>
    </hints>
@@ -4735,11 +4735,75 @@ background-color: rgb(157, 157, 157);</string>
    <hints>
     <hint type="sourcelabel">
      <x>103</x>
-     <y>646</y>
+     <y>527</y>
     </hint>
     <hint type="destinationlabel">
-     <x>-86</x>
+     <x>0</x>
      <y>600</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_10</sender>
+   <signal>clicked()</signal>
+   <receiver>Hi_OpencvClass</receiver>
+   <slot>on_zhi_open()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>832</x>
+     <y>332</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>843</x>
+     <y>0</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_8</sender>
+   <signal>clicked()</signal>
+   <receiver>Hi_OpencvClass</receiver>
+   <slot>on_zhione_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>73</x>
+     <y>197</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>118</x>
+     <y>0</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_7</sender>
+   <signal>clicked()</signal>
+   <receiver>Hi_OpencvClass</receiver>
+   <slot>on_zhitwo_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>66</x>
+     <y>330</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>86</x>
+     <y>0</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_9</sender>
+   <signal>clicked()</signal>
+   <receiver>Hi_OpencvClass</receiver>
+   <slot>on_zhithree_show()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>100</x>
+     <y>454</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>253</x>
+     <y>-12</y>
     </hint>
    </hints>
   </connection>
